--- a/views/signup.pug
+++ b/views/signup.pug
@@ -6,11 +6,11 @@ block append head
 block content
     main.main
         .login-form
-            h2.heading-secondary.ma-bt-lg Log into your account
+            h2.heading-secondary.ma-bt-lg Sign Up to create your account
             form.form.form--login
                 .form__group
                     label.form__label(for='name') Name
-                    input#uname.form__input(type='test', placeholder='Type your name', required)
+                    input#uname.form__input(type='test', placeholder='John Doe', required)
                 .form__group
                     label.form__label(for='email') Email address
                     input#email.form__input(type='email', placeholder='you@example.com', required)
